[gd_scene load_steps=6 format=3 uid="uid://dxbwqnnassettest"]

[ext_resource type="Script" path="res://tests/TestAssetsGemsController.gd" id="1"]
[ext_resource type="PackedScene" path="res://arena/HexArena.tscn" id="2"]
[ext_resource type="Script" path="res://game/CameraController.gd" id="3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(50, 0.2, 50)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.15, 0.15, 0.2, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.5, 1)
ambient_light_energy = 0.5

[node name="TestAssetsGems" type="Node3D"]
script = ExtResource("1")

[node name="HexArena" parent="." instance=ExtResource("2")]

[node name="InvisibleFloor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
visible = false
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="InvisibleFloor"]
shape = SubResource("BoxShape3D_1")

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("3")
look_at_offset = Vector3(0, 1, 0)
tilt_angle = 45.0
zoom_speed = 2.0
min_zoom = 8.0
max_zoom = 30.0
follow_smoothness = 8.0

[node name="CameraPivot" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
fov = 45.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 0.8
shadow_enabled = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 450.0
offset_bottom = 300.0

[node name="TitleLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Gem Assets Test"
theme_override_font_sizes/font_size = 24

[node name="InstructionsLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Camera Controls:
- Arrow Keys or WASD: Pan camera
- Q/E: Rotate camera
- Mouse Wheel: Zoom in/out"

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Loading gem assets..."

[node name="GemsContainer" type="Node3D" parent="."]